--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdk 26
         targetSdk 32
         versionCode 1
-        versionName "1.0"
+        versionName "1.0"   // здесь устанавливается версия приложения
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
