--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="ru.zzbo.concretemobile">
 
+    <!--
+        Файл манифеста AndroidManifest.xml
+        https://metanit.com/java/android/2.3.php?ysclid=lcrf7e8xu9959413466
+    -->
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
