--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+
 plugins {
     id 'com.android.application'
 }
@@ -7,9 +8,10 @@ android {
     defaultConfig {
         applicationId "ru.zzbo.concretemobile"
         minSdk 26
+        //noinspection ExpiredTargetSdkVersion
         targetSdk 32
         versionCode 1
-        versionName "1.1.3"   //todo здесь устанавливается версия приложения
+        versionName "1.1.4"   //todo здесь устанавливается версия приложения
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -35,7 +37,7 @@ android {
 
 dependencies {
     //FTP START
-
+    implementation 'commons-net:commons-net:3.8.0'
     // https://mvnrepository.com/artifact/org.apache.ftpserver/ftplet-api
     implementation 'org.apache.ftpserver:ftplet-api:1.2.0' //1.1.1
     // https://mvnrepository.com/artifact/org.apache.ftpserver/ftpserver-core
